fix: 🤣image too small

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -234,7 +234,7 @@
     }
 
     .card {
-        width: 100%;
+        width: 100% !important;
     }
 
 
